# mac-capture-x

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
data/locale/: en-US.ini  zh-CN.ini
src/: mac-audio.c  mac-display-capture.m  mac-sck-audio-capture.m  mac-sck-common.h  mac-sck-common.m  mac-sck-video-capture.m  mac-window-capture.m  plugin-main.c
